manifests/app.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: simple-app
  labels:
    env: simple-app
  namespace: default
spec:
  containers:
  - image: nginx:latest
    name: simple-app-ctr
    ports:
    - containerPort: 8080
    imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: svc-simple-app
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    env: simple-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - demo.robofarming.link #### <<<< Add your own domain name
      secretName: demo.robofarming.link
  rules:
  - host: demo.robofarming.link #### <<<< Add your own domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-simple-app
            port:
              number: 8080
