manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - demo.robofarming.link #### <<<< Add your own domain name
      secretName: demo.robofarming.link
  rules:
  - host: demo.robofarming.link #### <<<< Add your own domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-simple-app
            port:
              number: 8080
